--- a/src/main/resources/AfficherEspace.fxml
+++ b/src/main/resources/AfficherEspace.fxml
@@ -12,21 +12,22 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherEspace">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherEspace">
 
     <children>
-        <ImageView fitHeight="600.0" fitWidth="800.0">
+        <ImageView fitHeight="750.0" fitWidth="1051.0">
             <image>
                 <Image url="@image/ListEspace.png" />
             </image>
         </ImageView>
 
-        <TextField fx:id="txtNom" layoutX="593.0" layoutY="169.0" prefHeight="26.0" prefWidth="86.0" promptText="Nom" />
-        <Button fx:id="btnSupprimer" blendMode="HARD_LIGHT" layoutX="593.0" layoutY="441.0" mnemonicParsing="false" onAction="#supprimer" prefHeight="26.0" prefWidth="78.0" text="Supprimer" />
-        <Button fx:id="btnModifier" blendMode="HARD_LIGHT" layoutX="593.0" layoutY="405.0" mnemonicParsing="false" onAction="#modifier" prefHeight="26.0" prefWidth="78.0" text="Modifier" />
+        <TextField fx:id="txtNom" layoutX="667.0" layoutY="211.0" prefHeight="26.0" prefWidth="135.0" promptText="Nom" />
+        <Button fx:id="btnSupprimer" layoutX="661.0" layoutY="571.0" mnemonicParsing="false" onAction="#supprimer" prefHeight="35.0" prefWidth="96.0" text="Supprimer" />
+        <Button fx:id="btnModifier" layoutX="660.0" layoutY="512.0" mnemonicParsing="false" onAction="#modifier" prefHeight="35.0" prefWidth="96.0" text="Modifier" />
         <!-- Remplacez le champ d'état par une ComboBox -->
-        <ComboBox fx:id="comboEtat" blendMode="HARD_LIGHT" layoutX="593.0" layoutY="227.0" prefHeight="26.0" prefWidth="86.0" promptText="État">
+        <ComboBox fx:id="comboEtat" blendMode="HARD_LIGHT" layoutX="667.0" layoutY="262.0" prefHeight="26.0" prefWidth="135.0" promptText="État">
             <items>
                 <FXCollections fx:factory="observableArrayList">
                     <String fx:value="LIBRE" />
@@ -34,18 +35,26 @@
                 </FXCollections>
             </items>
         </ComboBox>
-        <TextArea fx:id="txtDescription" layoutX="593.0" layoutY="326.0" prefHeight="58.0" prefWidth="142.0" promptText="Description" />
+        <TextArea fx:id="txtDescription" layoutX="667.0" layoutY="362.0" prefHeight="121.0" prefWidth="189.0" promptText="Description" />
 
-        <TextField fx:id="txtCapacite" layoutX="593.0" layoutY="273.0" prefHeight="26.0" prefWidth="86.0" promptText="Capacité" />
+        <TextField fx:id="txtCapacite" layoutX="667.0" layoutY="309.0" prefHeight="26.0" prefWidth="135.0" promptText="Capacité" />
         <Label fx:id="lblTitleError" layoutX="305.0" layoutY="362.0" prefHeight="18.0" prefWidth="86.0" />
 
-        <ListView fx:id="listEspace" layoutX="264.0" layoutY="143.0" prefHeight="244.0" prefWidth="292.0" />
-        <Button blendMode="HARD_LIGHT" layoutX="268.0" layoutY="427.0" mnemonicParsing="false" onAction="#ajouterEspace" prefHeight="26.0" prefWidth="114.0" text="ajouter un espace" />
-        <Button layoutX="64.0" layoutY="165.0" mnemonicParsing="false" onAction="#gererEvenements" opacity="0.0" prefHeight="35.0" prefWidth="106.0" text="gerer les events" />
-        <TextField fx:id="txtRechercheNom" layoutX="423.0" layoutY="105.0" prefHeight="26.0" prefWidth="135.0" promptText="Rechercher un espace" />
-        <ChoiceBox fx:id="choixTri" layoutX="264.0" layoutY="105.0" prefHeight="26.0" prefWidth="86.0" />
-        <Button fx:id="btnCalendrier" blendMode="HARD_LIGHT" layoutX="268.0" layoutY="467.0" onAction="#afficherCalendrier" text="Afficher Calendrier" />
-        <Button fx:id="btnStats" blendMode="HARD_LIGHT" layoutX="268.0" layoutY="507.0" onAction="#afficherStatistiques" prefHeight="26.0" prefWidth="114.0" text="Statistiques" />
+        <ListView fx:id="listEspace" layoutX="130.0" layoutY="213.0" prefHeight="402.0" prefWidth="478.0" />
+        <Button layoutX="661.0" layoutY="634.0" mnemonicParsing="false" onAction="#ajouterEspace" prefHeight="35.0" prefWidth="96.0" text="ajouter un espace" />
+        <TextField fx:id="txtRechercheNom" layoutX="22.0" layoutY="288.0" prefHeight="26.0" prefWidth="86.0" promptText="Rechercher" />
+        <ChoiceBox fx:id="choixTri" layoutX="22.0" layoutY="249.0" prefHeight="26.0" prefWidth="86.0" />
+        <Button fx:id="btnCalendrier" blendMode="HARD_LIGHT" layoutX="151.0" layoutY="634.0" onAction="#afficherCalendrier" opacity="0.0" prefHeight="80.0" prefWidth="86.0" text="Afficher Calendrier" />
+        <Button fx:id="btnStats" blendMode="HARD_LIGHT" layoutX="238.0" layoutY="638.0" onAction="#afficherStatistiques" opacity="0.0" prefHeight="72.0" prefWidth="86.0" text="Statistiques" />
+      <Label layoutX="50.0" layoutY="218.0" prefHeight="26.0" prefWidth="38.0" text="Trier" textFill="#153f6f">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+
+        <Button fx:id="retourButton" layoutX="845.0" layoutY="45.0" onAction="#retournerVersAcceuil" opacity="0.0" prefHeight="57.0" prefWidth="157.0" text="Retour vers l'accueil" />
+        <Button fx:id="retourButton1" layoutX="26.0" layoutY="14.0" onAction="#retournerVersAcceuil" opacity="0.0" prefHeight="209.0" prefWidth="158.0" text="Retour vers l'accueil" />
+
 
     </children>
 
