--- a/src/main/resources/AjouterEspace.fxml
+++ b/src/main/resources/AjouterEspace.fxml
@@ -9,62 +9,66 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterEspace">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterEspace">
     <!-- Définir le style du AnchorPane avec l'image en arrière-plan et le filtre de flou -->
     <style>
-        -fx-background-image: url("C:\Users\LENOVO\projectpi\GestionReservation\src\main\resources\image\ajouts espace.png");
+
         -fx-background-repeat: no-repeat;
         -fx-background-position: center;
         -fx-background-size: cover;
     </style>
 
     <children>
-      <ImageView fitHeight="600.0" fitWidth="800.0" pickOnBounds="true">
+      <ImageView fitHeight="750.0" fitWidth="1051.0" layoutY="1.0" pickOnBounds="true">
          <image>
-            <Image url="@image/AjoutEspace.png" />
+            <Image url="@image/AjouterEspace.png" />
          </image>
       </ImageView>
-         <ComboBox fx:id="cbEtat" blendMode="SOFT_LIGHT" layoutX="430.0" layoutY="261.0" prefHeight="26.0" prefWidth="103.0" />
+         <ComboBox fx:id="cbEtat" layoutX="499.0" layoutY="324.0" prefHeight="26.0" prefWidth="103.0" />
 
-         <Label layoutX="294.0" layoutY="149.0" prefHeight="18.0" prefWidth="66.0" text="Nom :" textFill="#fff7f7">
+         <Label layoutX="368.0" layoutY="236.0" prefHeight="18.0" prefWidth="66.0" text="Nom :" textFill="#201c79">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
 
-         <Label layoutX="294.0" layoutY="206.0" text="Capacité :" textFill="WHITE">
+         <Label layoutX="365.0" layoutY="284.0" text="Capacité :" textFill="#201c79">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
 
          <!-- Utiliser un style personnalisé pour le bouton d'ajout -->
-         <Button fx:id="btnAdd" blendMode="HARD_LIGHT" layoutX="474.0" layoutY="431.0" onAction="#ajouterEspace" prefHeight="26.0" prefWidth="103.0" text="Ajouter" />
-         <TextField fx:id="txtNom" layoutX="429.0" layoutY="145.0" prefHeight="26.0" prefWidth="103.0" />
+         <Button fx:id="btnAdd" layoutX="571.0" layoutY="475.0" onAction="#ajouterEspace" prefHeight="26.0" prefWidth="103.0" text="Ajouter" />
+         <TextField fx:id="txtNom" layoutX="499.0" layoutY="232.0" prefHeight="26.0" prefWidth="103.0" />
 
               <!-- Utiliser un style personnalisé pour les labels d'erreur -->
         <Label fx:id="lblNomError" layoutX="26.0" layoutY="565.0" style="-fx-text-fill: red; -fx-font-weight: bold;" />
         <Label fx:id="lblCapaciteError" layoutX="26.0" layoutY="585.0" style="-fx-text-fill: red; -fx-font-weight: bold;" />
         <Label fx:id="lblDescriptionError" layoutX="26.0" layoutY="605.0" style="-fx-text-fill: red; -fx-font-weight: bold;" />
         <Label fx:id="lblEtatError" layoutX="26.0" layoutY="625.0" style="-fx-text-fill: red; -fx-font-weight: bold;" />
-         <TextField fx:id="txtDescription" layoutX="429.0" layoutY="326.0" prefHeight="70.0" prefWidth="234.0" />
-         <TextField fx:id="txtCapacite" layoutX="429.0" layoutY="201.0" prefHeight="26.0" prefWidth="103.0" />
-        <Button blendMode="HARD_LIGHT" layoutX="474.0" layoutY="480.0" mnemonicParsing="false" onAction="#afficherListeEspaces" prefHeight="26.0" prefWidth="103.0" text="Liste Espaces" />
-      <Label layoutX="299.0" layoutY="265.0" prefHeight="18.0" prefWidth="36.0" text="Etat :" textFill="WHITE">
+         <TextField fx:id="txtDescription" layoutX="497.0" layoutY="376.0" prefHeight="70.0" prefWidth="234.0" />
+         <TextField fx:id="txtCapacite" layoutX="499.0" layoutY="279.0" prefHeight="26.0" prefWidth="103.0" />
+        <Button layoutX="571.0" layoutY="531.0" mnemonicParsing="false" onAction="#afficherListeEspaces" prefHeight="26.0" prefWidth="103.0" text="Liste Espaces" />
+      <Label layoutX="365.0" layoutY="337.0" prefHeight="18.0" prefWidth="36.0" text="Etat :" textFill="#201c79">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="299.0" layoutY="325.0" prefHeight="18.0" prefWidth="82.0" text="Descritpion :" textFill="WHITE">
+      <Label layoutX="364.0" layoutY="382.0" prefHeight="18.0" prefWidth="82.0" text="Descritpion :" textFill="#201c79">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Label layoutX="299.0" layoutY="484.0" prefHeight="18.0" prefWidth="172.0" text="Consultez la liste des espace :" textFill="WHITE">
+      <Label layoutX="333.0" layoutY="535.0" prefHeight="18.0" prefWidth="172.0" text="Consultez la liste des espace :" textFill="#201c79">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
         <Button layoutX="67.0" layoutY="167.0" mnemonicParsing="false" onAction="#gererEvenements" opacity="0.0" prefHeight="33.0" prefWidth="103.0" text="gerer les events" />
+
+        <Button fx:id="retourButton" layoutX="845.0" layoutY="45.0" onAction="#retournerVersAcceuil" opacity="0.0" prefHeight="57.0" prefWidth="157.0" text="Retour vers l'accueil" />
+      <Button fx:id="retourButton1" layoutX="26.0" layoutY="14.0" onAction="#retournerVersAcceuil" opacity="0.0" prefHeight="209.0" prefWidth="158.0" text="Retour vers l'accueil" />
+
     </children>
 </AnchorPane>
