--- a/src/main/resources/AjouterEvent.fxml
+++ b/src/main/resources/AjouterEvent.fxml
@@ -9,67 +9,54 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterEvent">
+<AnchorPane prefHeight="750.0" prefWidth="1051.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AjouterEvent">
 
     <!-- L'image d'arrière-plan -->
-    <ImageView fitHeight="476.0" fitWidth="638.0">
+    <ImageView fitHeight="750.0" fitWidth="1051.0" layoutY="-1.0">
         <image>
-            <Image url="@image/AjoutEvent.png" />
+            <Image url="@image/AjouterEventFINAL.png" />
         </image>
     </ImageView>
-
-    <VBox layoutX="59.0" layoutY="49.0" prefHeight="82.0" prefWidth="67.0" spacing="10.0">
-
-        <!-- Contenu de votre interface utilisateur -->
-
-        <VBox spacing="10.0" />
-        <VBox spacing="10.0" />
-        <VBox spacing="10.0" />
-        <VBox spacing="10.0" />
-        <VBox spacing="10.0" />
-        <VBox spacing="10.0" />
-    </VBox>
-    <TextField fx:id="titleField" layoutX="380.0" layoutY="90.0" prefHeight="26.0" prefWidth="103.0" />
-    <DatePicker fx:id="datePicker" layoutX="380.0" layoutY="141.0" prefHeight="26.0" prefWidth="103.0" />
-    <TextField fx:id="nbrPersonneField" layoutX="380.0" layoutY="191.0" prefHeight="26.0" prefWidth="103.0" />
-    <ComboBox fx:id="espaceComboBox" layoutX="382.0" layoutY="238.0" prefHeight="26.0" prefWidth="103.0">
+    <TextField fx:id="titleField" layoutX="630.0" layoutY="199.0" prefHeight="26.0" prefWidth="103.0" />
+    <DatePicker fx:id="datePicker" layoutX="632.0" layoutY="247.0" prefHeight="26.0" prefWidth="103.0" />
+    <TextField fx:id="nbrPersonneField" layoutX="632.0" layoutY="296.0" prefHeight="26.0" prefWidth="103.0" />
+    <ComboBox fx:id="espaceComboBox" layoutX="630.0" layoutY="340.0" prefHeight="26.0" prefWidth="103.0">
         <!-- Les noms d'espaces seront ajoutés dynamiquement -->
     </ComboBox>
 
-    <Button blendMode="HARD_LIGHT" layoutX="398.0" layoutY="407.0" mnemonicParsing="false" onAction="#ajouterEvent" prefHeight="26.0" prefWidth="67.0" text="Ajouter" />
-    <Button fx:id="boutonPDF" blendMode="HARD_LIGHT" layoutX="497.0" layoutY="407.0" onAction="#genererPDF" prefHeight="26.0" prefWidth="67.0" text="  PDF" />
+    <Button blendMode="HARD_LIGHT" layoutX="596.0" layoutY="525.0" mnemonicParsing="false" onAction="#ajouterEvent" prefHeight="26.0" prefWidth="87.0" text="Ajouter" />
+    <Button fx:id="boutonPDF" blendMode="HARD_LIGHT" layoutX="723.0" layoutY="525.0" onAction="#genererPDF" prefHeight="26.0" prefWidth="87.0" text="  PDF" />
 
-    <Label layoutX="238.0" layoutY="241.0" text="Espace" textFill="#fffafa">
+    <Label layoutX="481.0" layoutY="344.0" text="Espace">
         <font>
             <Font size="13.0" />
         </font>
     </Label>
-    <Label layoutX="243.0" layoutY="291.0" text="Liste Invités" textFill="WHITE">
+    <Label layoutX="474.0" layoutY="400.0" text="Liste Invités">
         <font>
             <Font size="13.0" />
         </font>
     </Label>
-    <Label layoutX="238.0" layoutY="193.0" text="Nombre de personnes" textFill="#f2e5e5">
+    <Label layoutX="480.0" layoutY="299.0" text="Nombre de personnes">
         <font>
             <Font size="13.0" />
         </font>
     </Label>
 
-    <Label layoutX="242.0" layoutY="144.0" text="Date" textFill="#fffbfb">
+    <Label layoutX="481.0" layoutY="250.0" text="Date">
         <font>
             <Font size="13.0" />
         </font>
     </Label>
-    <Label layoutX="245.0" layoutY="93.0" prefHeight="18.0" prefWidth="42.0" text="Titre" textFill="WHITE">
+    <Label layoutX="480.0" layoutY="199.0" prefHeight="18.0" prefWidth="42.0" text="Titre">
         <font>
             <Font size="13.0" />
         </font>
     </Label>
-   <TextArea fx:id="listInvitesField" layoutX="382.0" layoutY="288.0" prefHeight="95.0" prefWidth="190.0" />
-    <Button fx:id="boutonConsulterEvents" text="Consulter Mes Événements" onAction="#consulterMesEvents" />
-
+    <TextArea fx:id="listInvitesField" layoutX="632.0" layoutY="391.0" prefHeight="95.0" prefWidth="190.0" />
+    <Button fx:id="boutonConsulterEvents" layoutX="384.0" layoutY="525.0" onAction="#consulterMesEvents" text="Consulter Mes Événements" />
+    <Button fx:id="retourButton" layoutX="29.0" layoutY="14.0" onAction="#retournerVersAcceuil" opacity="0.0" prefHeight="181.0" prefWidth="129.0" text="Retour vers l'accueil" />
 
 </AnchorPane>
