--- a/src/main/resources/EventAjoutes.fxml
+++ b/src/main/resources/EventAjoutes.fxml
@@ -1,21 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
+<?import javafx.scene.control.ComboBox?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="controllers.EventAjoutes"
             prefHeight="400.0" prefWidth="600.0">
 
-    <TableView fx:id="eventTableView" layoutX="28.0" layoutY="27.0" prefHeight="346.0" prefWidth="544.0">
-        <columns>
-            <TableColumn fx:id="titleColumn" prefWidth="150.0" text="Titre"/>
-            <TableColumn fx:id="dateColumn" prefWidth="150.0" text="Date"/>
-            <TableColumn fx:id="nbrPersonneColumn" prefWidth="100.0" text="Nombre de personnes"/>
-            <TableColumn fx:id="listeInvitesColumn" prefWidth="144.0" text="Liste des invités"/>
-        </columns>
-    </TableView>
+    <ListView fx:id="listeEvents" layoutX="28.0" layoutY="27.0" prefHeight="346.0" prefWidth="200.0"/>
+
+    <TextField fx:id="textFieldTitre" layoutX="250.0" layoutY="27.0" prefWidth="200.0" />
+    <TextField fx:id="textFieldNbrPersonne" layoutX="250.0" layoutY="67.0" prefWidth="200.0" />
+    <ComboBox fx:id="comboBoxEspace" layoutX="250.0" layoutY="107.0" prefWidth="200.0"/>
+    <TextArea fx:id="textFieldListeInvites" layoutX="250.0" layoutY="147.0" prefHeight="100.0" prefWidth="200.0" />
+    <TextField fx:id="textFieldDate" layoutX="250.0" layoutY="257.0" prefWidth="200.0" />
+
+    <Button fx:id="boutonGererEspace" layoutX="28.0" layoutY="380.0" text="Gérer l'espace"/>
+
+    <ChoiceBox fx:id="triChoiceBox" layoutX="250.0" layoutY="380.0">
+        <items>
+            <FXCollections fx:factory="observableArrayList">
+                <String fx:value="Nom" />
+                <String fx:value="Date" />
+            </FXCollections>
+        </items>
+    </ChoiceBox>
+
+    <TextField fx:id="txtRechercheNom" layoutX="450.0" layoutY="380.0" prefWidth="150.0" />
 
 </AnchorPane>
