--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -7,26 +7,20 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Login">
-    <left>
-        <AnchorPane prefHeight="407.0" prefWidth="228.0" BorderPane.alignment="CENTER">
-
-        </AnchorPane>
-    </left>
-    <right>
-        <AnchorPane prefHeight="400.0" prefWidth="332.0" BorderPane.alignment="CENTER">
-            <children>
-
-                <Label layoutX="14.0" layoutY="138.0" prefHeight="17.0" prefWidth="60.0" text="email" />
-                <Label layoutX="14.0" layoutY="200.0" prefHeight="17.0" prefWidth="60.0" text="password" />
-                <TextField fx:id="emailfield" layoutX="83.0" layoutY="134.0" />
-                <PasswordField fx:id="passwordfield" layoutX="83.0" layoutY="196.0" />
-                <Button fx:id="loginbtn" layoutX="23.0" layoutY="284.0" mnemonicParsing="false" onAction="#loginbtnonaction" prefHeight="25.0" prefWidth="227.0" text="login" />
-                <Button fx:id="cancelbtn" layoutX="25.0" layoutY="330.0" mnemonicParsing="false" onAction="#cancelbtnonaction" prefHeight="25.0" prefWidth="227.0" text="cancel" />
-                <Label fx:id="loginmessagelabel" layoutX="47.0" layoutY="249.0" prefHeight="17.0" prefWidth="222.0" text="invalid login please try again" textAlignment="CENTER" textFill="RED" />
-            </children>
-        </AnchorPane>
-    </right>
-</BorderPane>
+<AnchorPane prefHeight="407.0" prefWidth="228.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Login">
+    <children>
+        <ImageView fitHeight="750.0" fitWidth="1051.0">
+            <image>
+                <Image url="@image/Login.png" />
+            </image>
+        </ImageView>
+        <Label layoutX="371.0" layoutY="334.0" prefHeight="17.0" prefWidth="60.0" text="Email" />
+        <Label layoutX="371.0" layoutY="397.0" prefHeight="18.0" prefWidth="90.0" text="Mot de passe" />
+        <TextField fx:id="emailfield" layoutX="476.0" layoutY="325.0" prefHeight="36.0" prefWidth="156.0" />
+        <PasswordField fx:id="passwordfield" layoutX="476.0" layoutY="388.0" prefHeight="36.0" prefWidth="156.0" />
+        <Button fx:id="loginbtn" layoutX="458.0" layoutY="499.0" mnemonicParsing="false" onAction="#loginbtnonaction" opacity="0.0" prefHeight="54.0" prefWidth="191.0" text="login" />
+        <Button fx:id="cancelbtn" layoutX="502.0" layoutY="555.0" mnemonicParsing="false" onAction="#cancelbtnonaction" prefHeight="25.0" prefWidth="82.0" text="Annuler" />
+        <Label fx:id="loginmessagelabel" layoutX="473.0" layoutY="467.0" prefHeight="17.0" prefWidth="222.0" text="invalid login please try again" textAlignment="CENTER" textFill="RED" />
+    </children>
+</AnchorPane>
