--- a/src/main/resources/AfficherParking.fxml
+++ b/src/main/resources/AfficherParking.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -25,6 +26,7 @@
 
         <!-- Liste des parkings -->
         <ListView fx:id="listeParkings" layoutX="111.0" layoutY="276.0" prefHeight="299.0" prefWidth="337.0" />
+
 
         <!-- Zone de recherche -->
         <TextField fx:id="searchField" layoutX="111.0" layoutY="217.0" prefHeight="44.0" prefWidth="203.0" promptText="Rechercher..." />
